<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="new_account">New Account</string>
    <string name="existing_user">Existing User</string>
    <string name="shoes">Shoes</string>
    <string name="welcome_store">Welcome\nto Our\nShoe Store</string>
    <string name="mission">Our mission is to store your shoes!</string>
    <string name="instructions">Instructions</string>
    <string name="header">Ryan\'s Shoes</string>
    <string name="login">Please login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_shoes_text">Add the shoes you want saved!</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="directions_text">Please add the company name, name of shoe, size of shoe, and a brief description</string>
    <string name="log_out">Log Out</string>
</resources>
